--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
  <div class="bg-white dark:bg-gray-900 min-h-screen px-6 py-16 ">
     <div class="max-w-screen-lg mx-auto">
-      <h1 class="text-2xl font-bold text-gray-900 dark:text-white text-center mb-8">
+      <h1 class="text-xs font-bold text-gray-900 dark:text-white text-center mb-8">
         About Me
       </h1>
       <h1 class="text-6xl font-bold text-gray-900 dark:text-white text-center mb-8">
