--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,6 @@
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 
   <a href="/src/app/app.component.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="/assets/logo-MDB.png" class="h-16" alt="My logo">
       <span class="self-center text-5xl font-semibold whitespace-nowrap text-black hover:text-purple-950">-MDB</span>
   </a>
 
@@ -14,7 +13,7 @@
   <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
     <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-600 rounded-lg bg-gray-900 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-white md:dark:bg-white dark:border-gray-200">
       <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 bg-white rounded md:bg-transparent md:text-black md:p-0 md:dark:text-black" aria-current="page">Home</a>
+        <a routerLink="/home" class="block py-2 px-3 text-gray-900 bg-white rounded md:bg-transparent md:text-black md:p-0 md:dark:text-black" aria-current="page">Home</a>
       </li>
       <li>
         <a routerLink="/about-me" class="block py-2 px-3 text-white bg-white rounded hover:bg-gray-700 md:hover:bg-transparent md:hover:text-black md:p-0 md:dark:hover:text-gray-700 dark:text-gray-900 dark:hover:bg-gray-200 dark:hover:text-black md:dark:hover:bg-transparent dark:border-gray-200">About Me</a>
