--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-navbar></app-navbar>
+<app-loader></app-loader>
 <router-outlet></router-outlet> <!--  Le <router-outlet> sert de conteneur pour afficher le contenu du composant correspondant à la route active. -->
 
