--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
   <div class="z-10 text-center">
     <!-- Name -->
     <h1 class="text-4xl md:text-6xl font-bold text-black">
-      I'm Mohamed Dhia Bargui <span class="text-blue-500">-MDB</span>
+      I'm Mohamed Dhia Bargui <span class="text-purple-700 hover:text-purple-400"> < MDB > </span>
     </h1>
 
     <!-- Subtitle -->
