--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -19,6 +19,10 @@
           <span>Python</span>
         </div>
         <div class="bg-gray-800 p-3 rounded-lg flex items-center gap-2">
+          <img src="assets/java.png" alt="Python Logo" class="w-12 h-12">
+          <span>Java</span>
+        </div>
+        <div class="bg-gray-800 p-3 rounded-lg flex items-center gap-2">
           <img src="assets/html.png" alt="HTML Logo" class="w-12 h-12">
           <span>HTML</span>
         </div>
@@ -26,10 +30,7 @@
           <img src="assets/css.png" alt="CSS Logo" class="w-12 h-12">
           <span>CSS</span>
         </div>
-        <div class="bg-gray-800 p-3 rounded-lg flex items-center gap-2">
-          <img src="assets/php.png" alt="PHP Logo" class="w-12 h-12">
-          <span>PHP</span>
-        </div>
+       
         <div class="bg-gray-800 p-3 rounded-lg flex items-center gap-2">
           <img src="assets/javascript.png" alt="JavaScript Logo" class="w-12 h-12">
           <span>JavaScript</span>
@@ -37,6 +38,10 @@
         <div class="bg-gray-800 p-3 rounded-lg flex items-center gap-2">
           <img src="assets/typescript.png" alt="TypeScript Logo" class="w-12 h-12">
           <span>TypeScript</span>
+        </div>
+        <div class="bg-gray-800 p-3 rounded-lg flex items-center gap-2">
+          <img src="assets/php.png" alt="PHP Logo" class="w-12 h-12">
+          <span>PHP</span>
         </div>
       </div>
     </div>
@@ -60,6 +65,10 @@
         <div class="bg-gray-800 p-3 rounded-lg flex items-center gap-2">
           <img src="assets/react.png" alt="TypeScript Logo" class="w-12 h-12">
           <span>React</span>
+        </div>
+        <div class="bg-gray-800 p-3 rounded-lg flex items-center gap-2">
+          <img src="assets/vue.png" alt="vue Logo" class="w-12 h-12">
+          <span>Vue</span>
         </div>
       </div>
     </div>
