--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 
   <a href="/src/app/app.component.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <span class="self-center text-5xl font-semibold whitespace-nowrap text-black hover:text-purple-950">-MDB</span>
+      <span class="self-center text-5xl font-semibold whitespace-nowrap text-purple-700 hover:text-purple-400"> < M D B > </span>
   </a>
 
   
