--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,70 +1,77 @@
 <div class="container mx-auto px-4 py-8 bg-gray-900">
   <h1 class="text-2xl font-bold text-center mb-8 text-white">Projects</h1>
-    <h1 class="text-6xl font-bold text-center mb-8 text-white">Projects</h1>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
-      <!-- Card 1 -->
-      <div class="bg-white shadow-md rounded-lg overflow-hidden">
+  <h1 class="text-6xl font-bold text-center mb-8 text-white">Projects</h1>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
+    <!-- Card 1 -->
+    <div class="bg-white shadow-md rounded-lg overflow-hidden">
+      <a href="https://example.com/project1" target="_blank">
         <img
           src="assets/project1.webp"
           alt="Project 1"
           class="w-full h-48 object-cover"
         />
-        <div class="p-6 bg-slate-200">
-          <h2 class="text-2xl font-bold text-gray-800 mb-2">Project Title 1</h2>
-          <p class="text-black font-semibold">
-            This is a short description of Project 1. It gives an overview of the
-            purpose and features of the project.
-          </p>
-        </div>
+      </a>
+      <div class="p-6 bg-slate-200">
+        <h2 class="text-2xl font-bold text-gray-800 mb-2">Project Title 1</h2>
+        <p class="text-black font-semibold">
+          This is a short description of Project 1. It gives an overview of the
+          purpose and features of the project.
+        </p>
       </div>
-  
-      <!-- Card 2 -->
-      <div class="bg-white shadow-md rounded-lg overflow-hidden">
+    </div>
+
+    <!-- Card 2 -->
+    <div class="bg-white shadow-md rounded-lg overflow-hidden">
+      <a href="https://example.com/project1" target="_blank">
         <img
           src="assets/project1.webp"
           alt="Project 2"
           class="w-full h-48 object-cover"
         />
-        <div class="p-6 bg-slate-200">
-          <h2 class="text-2xl font-bold text-gray-800 mb-2">Project Title 2</h2>
-          <p class="text-black font-semibold">
-            This is a short description of Project 2. It gives an overview of the
-            purpose and features of the project.
-          </p>
-        </div>
+      </a>
+      <div class="p-6 bg-slate-200">
+        <h2 class="text-2xl font-bold text-gray-800 mb-2">Project Title 2</h2>
+        <p class="text-black font-semibold">
+          This is a short description of Project 2. It gives an overview of the
+          purpose and features of the project.
+        </p>
       </div>
-  
-      <!-- Card 3 -->
-      <div class="bg-white shadow-md rounded-lg overflow-hidden">
+    </div>
+
+    <!-- Card 3 -->
+    <div class="bg-white shadow-md rounded-lg overflow-hidden">
+      <a href="https://example.com/project3" target="_blank">
         <img
           src="assets/project1.webp"
           alt="Project 3"
           class="w-full h-48 object-cover"
         />
-        <div class="p-6 bg-slate-200">
-          <h2 class="text-2xl font-bold text-gray-800 mb-2">Project Title 3</h2>
-          <p class="text-black font-semibold">
-            This is a short description of Project 3. It gives an overview of the
-            purpose and features of the project.
-          </p>
-        </div>
+      </a>
+      <div class="p-6 bg-slate-200">
+        <h2 class="text-2xl font-bold text-gray-800 mb-2">Project Title 3</h2>
+        <p class="text-black font-semibold">
+          This is a short description of Project 3. It gives an overview of the
+          purpose and features of the project.
+        </p>
       </div>
-  
-      <!-- Card 4 -->
-      <div class="bg-white shadow-md rounded-lg overflow-hidden">
+    </div>
+
+    <!-- Card 4 -->
+    <div class="bg-white shadow-md rounded-lg overflow-hidden">
+      <a href="https://example.com/project4" target="_blank">
         <img
           src="assets/project1.webp"
           alt="Project 4"
           class="w-full h-48 object-cover"
         />
-        <div class="p-6 bg-slate-200">
-          <h2 class="text-2xl font-bold text-gray-800 mb-2">Project Title 4</h2>
-          <p class="text-black font-semibold">
-            This is a short description of Project 4. It gives an overview of the
-            purpose and features of the project.
-          </p>
-        </div>
+      </a>
+      <div class="p-6 bg-slate-200">
+        <h2 class="text-2xl font-bold text-gray-800 mb-2">Project Title 4</h2>
+        <p class="text-black font-semibold">
+          This is a short description of Project 4. It gives an overview of the
+          purpose and features of the project.
+        </p>
       </div>
     </div>
   </div>
-  
+</div>
